--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+spring.jpa.hibernate.ddl-auto=none
 
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/learningspring2
+spring.datasource.password=admin
+spring.datasource.username=postgres
